# LiniaMCU

./: .gitignore
doc/РД/: Распиновка.txt
doc/РД/2025-10-07/: 1- Регистры ПЛИС.docx  1-РЭ КПТС-C.docx  kont_lineJ.sch  Порты ORANGE PI 5+.docx
doc/РД/2025-10-09/: Регистры ПЛИС.docx
doc/РД/Schematic/: kont_lineJ.sch
doc/РД/Schematic/_old/: Контроллер L1.tdd
doc/РД/Распиновка/: .mxproject  Распиновка.ioc  Распиновка.txt
doc/РД/Распиновка/Core/Src/: main.c  stm32f4xx_hal_msp.c
doc/РД/Распиновка/EWARM/: Распиновка.ewd  Распиновка.ewp
sources/: CMakeLists.txt  LiniaMCU.uvmpw
sources/Common/: Command.cpp  Command.h  Common.cpp  Common.h  CommonTypes.h  Common_pan.cpp  Handlers_d.h  Interface_d.cpp  Interface_d.h  Interface_p.h  Messages.cpp  Messages.h  Messages_l.cpp  Messages_l.h  Transceiver.h  Transceiver_d.cpp  Transceiver_p.cpp  defines_com.h
sources/Common/Hardware/HAL/: HAL_SPI4_p.cpp
sources/Common/_VS_GUI/HAL/: stm32f4xx_hal.cpp  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_rcc.cpp  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_sram.h  stm32f4xx_ll_fmc.h
sources/Common/_VS_GUI/HAL/Legacy/: stm32_hal_legacy.h
sources/Common/_VS_KEIL/CMSIS/: core_cm4.h
sources/Common/_VS_KEIL/std_includes/: climits  limits  stdarg.h  stdlib.h  string.h
sources/Common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_crc.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_pcd.h  stm32f4xx_hal_tim.h  stm32f4xx_ll_usb.h
sources/Common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_crc.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_pcd_ex.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_usb.c
sources/Common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
sources/Common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
sources/Common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_def.h
sources/Common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
sources/Device/: CMakeLists.txt  Device.uvoptx  Device.uvprojx
sources/Device/src/: Log.cpp  Log.h  defines.h  main.cpp  main_d.cpp  structs.h
sources/Device/src/Device/: Base.cpp  Base.h  ChanB.cpp  ChanC.cpp  ChanS.cpp  Channels.h  Chips.cpp  Chips.h  Commutator.cpp  Commutator.h  Device.cpp  Device.h  FPGA.cpp  FPGA.h  MeasCurrent.cpp  MeasCurrent.h  PCM.cpp  PCM.h  ScanFormer.cpp  ScanFormer.h  Source3kV.cpp  Source3kV.h  Source50V.cpp  Source50V.h  Sources.cpp  Sources.h  Substrate.cpp  Substrate.h  Switch.cpp  Switch.h
sources/Device/src/Device/PCM/: PCM.cpp  PCM.h  ParserPCM.cpp  ParserPCM.h  SCPI.cpp  SCPI.h
sources/Device/src/FDrive/: FDrive_d.cpp  FDrive_d.h  FDrive_d_Handler.cpp
sources/Device/src/FreqMeter/: FreqMeter_d.cpp  FreqMeter_d.h
sources/Device/src/Generator/: AD5697.cpp  AD5697.h  AD9952.cpp  AD9952.h  Calibrator.cpp  Calibrator.h  Filtr.cpp  Filtr.h  Generator_d.cpp  Generator_d.h
sources/Device/src/Generator/FPGA/: Clock.cpp  Clock.h  FPGA.cpp  FPGA.h  ParametersFPGA.cpp  ParametersFPGA.h  RegistersFPGA.cpp  RegistersFPGA.h
sources/Device/src/Hardware/: CPU.cpp  CPU.h  Timer.cpp  Timer.h  VCP_d.cpp  VCP_d.h
sources/Device/src/Hardware/CMSIS/: startup_stm32f407xx.s  system_stm32f4xx.c
sources/Device/src/Hardware/FatFS/: FatFS.cpp  FatFS.h  ffconf.h
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_CRC32.cpp  HAL_EEPROM.cpp  HAL_HCD.cpp  HAL_I2C1.cpp  HAL_IT.cpp  HAL_PCD.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_PIO.cpp  HAL_PIO.h  HAL_SPI1.cpp  HAL_SPI3.cpp  HAL_TIM.cpp  HAL_TIM2.cpp  HAL_TIM3.cpp  HAL_USART1.cpp  stm32f4xx_hal_conf.h
sources/Device/src/Hardware/USBD/: usbd_cdc_interface.cpp  usbd_conf.cpp  usbd_conf.h  usbd_core.cpp  usbd_desc.cpp
sources/Device/src/Hardware/USBH/: usbh_conf.cpp  usbh_conf.h  usbh_diskio.cpp
sources/Device/src/Interface/: Handlers_d.cpp
sources/Device/src/Settings/: CalibrationSettings.cpp  CalibrationSettings.h
sources/Device/src/Utils/: Buffer.cpp  Buffer.h  BufferOSDP.cpp  BufferOSDP.h  Debug.cpp  Debug.h  Log.cpp  Log.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Queue.cpp  Queue.h  RingBuffer.cpp  RingBuffer.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h
sources/scripts/: promt.bat
sources/scripts/Keil/: edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
